k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mn-upload-deployment
spec:
  selector:
    matchLabels:
      app: mn-upload
  replicas: 1
  template:
    metadata:
      labels:
        app: mn-upload
    spec:
      containers:
        - name: mn-upload
          image: az82/mn-upload:latest
          imagePullPolicy: "Never"
          ports:
            - name: http
              containerPort: 8080
