k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mn-upload-service
  labels:
    app: mn-upload
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: mn-upload
